# logind-zbus

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
examples/: list_active_graphical.rs  unlock_signal.rs
src/: lib.rs  types.rs
src/manager/: generated.rs  mod.rs  tests.rs  types.rs
src/proxy/: macros.rs  manager.rs  mod.rs  seat.rs  session.rs  user.rs
src/seat/: generated.rs  mod.rs  tests.rs  types.rs
src/session/: generated.rs  tests.rs  types.rs
src/user/: generated.rs  mod.rs  tests.rs  types.rs
