[package]
name = "logind-zbus"
version = "2.0.0"
license = "MPL-2.0"
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2021"
readme = "README.md"
repository = "https://gitlab.com/flukejones/logind-zbus"
homepage = "https://gitlab.com/flukejones/logind-zbus"
documentation = "https://docs.rs/logind-zbus"
description = "A dbus client (using zbus) for logind"
keywords = ["systemd", "logind", "zbus"]
categories = ["os::unix-apis"]

[features]
default = []
non_blocking = []

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
zbus = "^2.0.0"
zbus_macros = "^2.0.0"
zvariant = "^3.0.0"
zvariant_derive = "^3.0.0"
