[package]
name = "logind-zbus"
version = "3.0.3"
license = "MPL-2.0"
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2021"
readme = "README.md"
repository = "https://gitlab.com/flukejones/logind-zbus"
homepage = "https://gitlab.com/flukejones/logind-zbus"
documentation = "https://docs.rs/logind-zbus"
description = "A dbus client (using zbus) for logind"
keywords = ["systemd", "logind", "zbus"]
categories = ["os::unix-apis"]

[dependencies]
serde = "^1.0"

[dev-dependencies]
futures-lite = "1.12.0"

[dependencies.zbus]
git = "https://gitlab.freedesktop.org/dbus/zbus"
branch = "main"
